# crypto_bot

./: .gitignore  main.py  pyproject.toml  research.ipynb
core/: binance.py
