[tool.poetry]
name = "crypto_bot"
version = "0.1.0"
description = "Crypto bot."
authors = ["Yanis"]

[tool.poetry.dependencies]
python = "^3.8"
python-binance = "^0.7.5"
jupyter = "^1.0.0"
pandas = "^1.1.4"
jupyter-tabnine = "^1.1.0"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
